# chie

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/chie/: Cargo.toml  README.md
crates/chie-coordinator/: Cargo.toml  README.md  TODO.md  config.example.toml
crates/chie-coordinator/migrations/: 001_initial_schema.sql  002_audit_log.sql  003_content_moderation.sql  004_node_reputation.sql  005_tenants.sql  006_payments.sql  007_gdpr_compliance.sql  008_tos_tracking.sql  009_jurisdiction_filtering.sql  010_email_retry_queue.sql  011_email_delivery_history.sql
crates/chie-coordinator/src/: admin.rs  alerting.rs  analytics.rs  api_changelog.rs  api_keys.rs  api_validation.rs  api_versioning.rs  archiving.rs  audit_log.rs  auth.rs  batch.rs  brute_force.rs  cache.rs  compression.rs  config.rs  content_moderation.rs  correlation.rs  deployment.rs  endpoint_metrics.rs  error_tracking.rs  etag.rs  export.rs  failover.rs  feature_flags.rs  federation.rs  fraud.rs  gdpr.rs  graphql.rs  health.rs  ip_rate_limit.rs  jurisdiction.rs  main.rs  metrics.rs  migrations.rs  node_reputation.rs  nonce_cache.rs  openapi.rs  payment.rs  pool_tuning.rs  popularity.rs  (+16 more)
crates/chie-coordinator/src/admin/: email.rs  management.rs  mod.rs  moderation.rs  operations.rs  system.rs
crates/chie-coordinator/src/alerting/: channels.rs  email.rs  mod.rs  rules.rs  tests.rs  types.rs  utils.rs
crates/chie-coordinator/src/api/: core.rs  developer.rs  mod.rs  proofs.rs  stats.rs  webhooks.rs
crates/chie-coordinator/src/db/: mod.rs  models.rs  (+1 more)
crates/chie-core/: Cargo.toml  README.md  TODO.md
crates/chie-core/benches/: adaptive_ratelimit_bench.rs  adaptive_retry_bench.rs  alerting_bench.rs  analytics_bench.rs  anomaly_bench.rs  auto_repair_bench.rs  backup_bench.rs  bandwidth_estimation_bench.rs  batch_bench.rs  cache_admission_bench.rs  cache_bench.rs  cache_invalidation_bench.rs  cache_warming_bench.rs  checkpoint_bench.rs  chunk_encryption_bench.rs  circuit_breaker_bench.rs  compression_bench.rs  config_bench.rs  connection_multiplexing_bench.rs  content_aware_cache_bench.rs  content_bench.rs  content_router_bench.rs  dashboard_bench.rs  dedup_bench.rs  degradation_bench.rs  events_bench.rs  expiration_bench.rs  forecasting_bench.rs  gc_bench.rs  geo_selection_bench.rs  health_bench.rs  http_pool_bench.rs  integrity_bench.rs  lifecycle_bench.rs  logging_bench.rs  metrics_bench.rs  metrics_exporter_bench.rs  network_diag_bench.rs  node_bench.rs  orchestrator_bench.rs  (+28 more)
crates/chie-core/src/: adaptive_ratelimit.rs  adaptive_retry.rs  alerting.rs  analytics.rs  anomaly.rs  auto_repair.rs  backup.rs  bandwidth_estimation.rs  batch.rs  cache.rs  cache_admission.rs  cache_invalidation.rs  cache_warming.rs  checkpoint.rs  chunk_encryption.rs  circuit_breaker.rs  compression.rs  config.rs  connection_multiplexing.rs  content_aware_cache.rs  content_router.rs  custom_exporters.rs  dashboard.rs  dedup.rs  degradation.rs  events.rs  expiration.rs  forecasting.rs  gc.rs  geo_selection.rs  health.rs  http_pool.rs  integrity.rs  lib.rs  lifecycle.rs  logging.rs  metrics.rs  metrics_exporter.rs  network_diag.rs  orchestrator.rs  (+28 more)
crates/chie-core/tests/: bandwidth_proof_pipeline.rs  stress_tests.rs
crates/chie-crypto/: CONSTANT_TIME.md  Cargo.toml  MIRI.md  README.md  SECURITY_AUDIT.md  TODO.md  miri-test.sh
crates/chie-crypto/benches/: crypto_bench.rs
crates/chie-crypto/fuzz/: Cargo.toml  README.md
crates/chie-crypto/src/: abe.rs  accumulator.rs  adaptor.rs  advanced_commitment.rs  aggregate.rs  aggregate_mac.rs  anonymous_credentials.rs  audit_log.rs  bbs_plus.rs  blind.rs  bls.rs  bulletproof.rs  cache_timing.rs  cert_manager.rs  certified_deletion.rs  commitment.rs  compliance.rs  ct.rs  ct_audit.rs  differential_privacy.rs  dilithium.rs  dkg.rs  elgamal.rs  encryption.rs  entropy.rs  formal_verify.rs  forward_secure.rs  frost.rs  functional_encryption.rs  garbled_circuit.rs  hash.rs  hmac.rs  hsm.rs  ibe.rs  kdf.rs  key_backup.rs  key_formats.rs  key_policy.rs  key_rotation_scheduler.rs  keyexchange.rs  (+45 more)
crates/chie-crypto/tests/: constant_time_verification.rs  cross_compat.rs  kat_vectors.rs  miri_safety.rs
crates/chie-p2p/: Cargo.toml  README.md  TODO.md
crates/chie-p2p/benches/: p2p_benchmarks.rs
crates/chie-p2p/examples/: bootstrap_demo.rs  mesh_demo.rs  protocol_demo.rs
crates/chie-p2p/src/: adaptive_chunk_size.rs  adaptive_replication.rs  adaptive_routing.rs  adaptive_timeout.rs  analytics.rs  anti_sybil_pow.rs  aqm.rs  auto_tuning.rs  backward_compat.rs  bandwidth.rs  bandwidth_auction.rs  bandwidth_fairness.rs  bandwidth_market_maker.rs  bandwidth_prediction.rs  bandwidth_proof.rs  bandwidth_scheduler.rs  bandwidth_token.rs  blocklist.rs  cache.rs  cache_invalidation.rs  cert_pinning.rs  chunk_scheduler.rs  circuit_breaker.rs  codec.rs  compression.rs  connection_manager.rs  connection_optimizer.rs  connection_pool.rs  connection_prewarming.rs  connection_quality_predictor.rs  connection_scheduler.rs  content_lifecycle.rs  content_migration.rs  content_pinning.rs  content_popularity.rs  content_routing.rs  content_search.rs  content_verification.rs  dht_replication.rs  discovery.rs  (+72 more)
crates/chie-p2p/tests/: integration_codec.rs  integration_mesh.rs  integration_protocol.rs
crates/chie-shared/: Cargo.toml  README.md  TODO.md
crates/chie-shared/benches/: serialization.rs
crates/chie-shared/src/: constants.rs  conversions.rs  encoding.rs  errors.rs  lib.rs  messages.rs  result.rs  schema.rs  utils.rs
crates/chie-shared/tests/: backward_compatibility.rs  fuzz_tests.proptest-regressions  fuzz_tests.rs  performance_regression.rs  proptests.proptest-regressions  proptests.rs  schema_tests.rs  type_size_regression.rs
crates/chie/src/: lib.rs
workers/: Cargo.toml  README.md  TODO.md
workers/src/: chunked_upload.rs  encryption_pipeline.rs  health.rs  ipfs.rs  ipfs_pinning.rs  lib.rs  moderation.rs  parallel.rs  progress.rs  queue.rs  retry.rs  s3.rs
(+78 files in other folders)
