[workspace]
resolver = "2"
members = [
    "crates/chie",
    "crates/chie-core",
    "crates/chie-p2p",
    "crates/chie-coordinator",
    "crates/chie-crypto",
    "crates/chie-shared",
    "workers",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["COOLJAPAN OU"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/chie"
homepage = "https://github.com/cool-japan/chie"
documentation = "https://docs.rs/chie-core"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxicode = { version = "0.1.1", features = ["serde", "derive"] }
toml = "0.9"

# P2P networking
libp2p = { version = "0.56", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "request-response", "tokio", "macros", "cbor", "identify", "quic"] }
libp2p-identity = "0.2"

# Web framework
axum = { version = "0.8", features = ["tokio", "json", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Cryptography
chacha20poly1305 = "0.10"
blake3 = "1.8"
ed25519-dalek = { version = "2.2", features = ["rand_core", "batch"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
curve25519-dalek = { version = "4.1", features = ["serde"] }
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
subtle = "2.6"
zeroize = { version = "1.8", features = ["derive"] }
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["std"] }

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
void = "1.0"
once_cell = "1.21"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# API Documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# GraphQL
async-graphql = { version = "7.0", features = ["uuid", "chrono"] }
async-graphql-axum = "7.2"

# HTTP client
reqwest = { version = "0.13", features = ["json", "multipart"] }

# AWS SDK
aws-config = "1.8"
aws-sdk-s3 = "1.91"
aws-credential-types = "1.2"

# Internal crates
chie = { path = "crates/chie", version = "0.1.0" }
chie-core = { path = "crates/chie-core", version = "0.1.0" }
chie-p2p = { path = "crates/chie-p2p", version = "0.1.0" }
chie-coordinator = { path = "crates/chie-coordinator", version = "0.1.0" }
chie-crypto = { path = "crates/chie-crypto", version = "0.1.0" }
chie-shared = { path = "crates/chie-shared", version = "0.1.0" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
lto = false  # Disable LTO for benchmarks to avoid rustc bug
strip = false
