[package]
name = "chie-coordinator"
description = "Central coordinator server for CHIE Protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords = ["chie", "coordinator", "server", "api", "p2p"]
categories = ["network-programming", "web-programming::http-server", "asynchronous"]

[[bin]]
name = "chie-coordinator"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = { workspace = true }
redis = { workspace = true }
hex = { workspace = true }
chie-shared = { workspace = true }
chie-crypto = { workspace = true }
futures = "0.3"
reqwest = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
flate2 = "1.1"
brotli = "8.0"
blake3 = { workspace = true }
dashmap = "6.1"
rand = "0.9"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
urlencoding = "2.1"
regex = "1"
