[package]
name = "chie-crypto"
description = "Cryptographic primitives for CHIE Protocol"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords = ["chie", "cryptography", "encryption", "signatures", "p2p"]
categories = ["cryptography", "authentication", "no-std::no-alloc"]

[dependencies]
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_core06 = { workspace = true }
thiserror = { workspace = true }
chie-shared = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
zeroize = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = "0.12"
oxicode = { workspace = true }
base64 = "0.22"
serde_json = "1.0"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-sphincsplus = "0.7"
pqcrypto-traits = "0.3"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-prime = "0.5"
getrandom = "0.4"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "crypto_bench"
harness = false
